--- a/config.toml
+++ b/config.toml
@@ -1,14 +1,14 @@
-baseURL = "https://g1eny0ung.site"
+baseURL = "https://my-sakura.netlify.app"
 languageCode = "zh-Hans"
 defaultContentLanguage = "zh"
-title = "g1eny0ung 的博客"
+title = "my-sakura 的博客"
 theme = "dream"
 
 copyright = '<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享署名-非商业性使用-相同方式共享 4.0 国际许可协议</a>进行许可。'
 
-googleAnalytics = "UA-98295641-1"
+googleAnalytics = "UA-180228758-1"
 
-disqusShortname = "g1eny0ung"
+disqusShortname = "my-sakura"
 
 enableRobotsTXT = true
 
@@ -32,32 +32,32 @@ hasCJKLanguage = true
 
   images = ["me/background.jpg"] 
 
-  author = "g1eny0ung"
-  description = "g1eny0ung 的生活记录～"
-  avatar = "/me/yy.jpg"
+  author = "sakura"  
+  description = "sakura 的生活记录～"
+  avatar = "/me/qq.png"
   motto = "与其感慨路难行，不如马上出发。"
   categoriesLimitInHeader = 6
   # headerBottomText = ""
 
   rss = true
 
-  utterancesRepo = "g1eny0ung/g1eny0ung.github.io"
+  utterancesRepo = "hugo-blog/my-Sakura.github.io"
 
   # valine = true
   # LEANCLOUD_APP_ID = ""
   # LEANCLOUD_APP_KEY = ""
   
-  email = "g1enyy0ung@gmail.com"
-  twitter = "g1eny0ung"
-  facebook = "g1eny0ung"
-  instagram = "g1eny0ung"
+  email = "liu1771451233@gmail.com"
+  # twitter = ""
+  # facebook = "g1eny0ung"
+  # instagram = "g1eny0ung"
   # mastodon = ""
-  linkedin = "g1eny0ung"
-  github = "g1eny0ung"
-  stackoverflow = "5676489/g1eny0ung"
-  codepen = "g1eny0ung"
+  # linkedin = "g1eny0ung"
+  github = "my-Sakura"
+  # stackoverflow = "5676489/g1eny0ung"
+  # codepen = "g1eny0ung"
 
-  siteStartYear = 2016
+  siteStartYear = 2020
 
   favicon = "/favicon.ico"
 
